@@ -8,8 +8,9 @@ HYPERMAIL VERSION 3.0.0
 2023-00-00 Jose Kahan
 	* src/{parse.c, string.c, proto.h}
 	extend mdecode_RFC2047() so that;
-	1) it partially supports FC6532 by replacing all
-	invalid UTF-8 characters with 	a '?'.
+	1) it partially supports RFC6532
+	2) if a header value is not valid UTF-8,
+	replaces it with "(wrong string)"
 	2) replaces all control characters in the
 	header values that are not \r\n\t with a '?'.
 
